--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu</groupId>
 	<artifactId>eai-module-jdbc-postgresql</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${nabu-eai-module-jdbc-postgresql-version}</version>
 	<name>eai-module-jdbc-postgresql</name>
 
 	<parent>
