--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,17 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1212</version>
+			<version>42.2.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.ongres.scram</groupId>
+					<artifactId>client</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
